@@ -158,12 +158,12 @@ $smtpPassword = "secret";
 // array( ID, Price, InGallery, Note )
 $defaultPrices = array(
     array( 1, 5, 0, "Wooden Wall" ),
-    array( 2, 80, 0, "Steel Wall" ),
-    array( 3, 120, 0, "Concrete Wall" ),
+    array( 2, 100, 0, "Steel Wall" ),
+    array( 3, 230, 0, "Concrete Wall" ),
     array( 0, 0, 0, "Empty Floor" ),
     array( 21, 20, 0, "Door" ),
     array( 20, 15, 0, "Window" ),
-    array( 111, 180, 0, "Pit" ),
+    array( 111, 600, 0, "Pit" ),
     array( 103, 200, 0, "Power Source" ),
     array( 102, 5, 0, "Wiring" ),
     array( 120, 5, 0, "Vertical Wiring" ),
@@ -184,18 +184,18 @@ $defaultPrices = array(
     array( 71, 100, 0, "Chihuahua" ),
     array( 72, 20, 0, "Cat" ),
     
-    array( 500, 50, 0, "Saw" ),
+    array( 500, 400, 0, "Saw" ),
     array( 509, 2400, 0, "Crowbar" ),
     array( 501, 800, 0, "Cutting Torch" ),
     array( 502, 1200, 0, "S-W Model 36" ),
     array( 503, 150, 0, "Brick" ),
     array( 512, 200, 0, "Club" ),
     array( 505, 1200, 0, "Doorstop" ),
-    array( 506, 50, 0, "Wire Cutters" ),
+    array( 506, 400, 0, "Wire Cutters" ),
     array( 507, 1200, 0, "Ammonium Nitrate Diesel Bomb" ),
     array( 508, 100, 0, "Drugged Meat" ),
-    array( 510, 50, 0, "Water" ),
-    array( 511, 3600, 0, "Ladder" ),
+    array( 510, 400, 0, "Water" ),
+    array( 511, 1800, 0, "Ladder" ),
 
     array( 2000, 100000, 1, "Owl - Rohrer" ),
     array( 2001, 100000, 1, "Sky - Rohrer" ),
